--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Infraestrutura\packages.config" />
   <repository path="..\MasterMind.Tests\packages.config" />
   <repository path="..\MasterMind\packages.config" />
 </repositories>
