--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -59,6 +59,12 @@
     <Compile Include="NH\NHSessionFactoryManager.cs" />
     <Compile Include="NH\NHSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Entidades\Map\RespostasMap.cs" />
+    <Compile Include="Repositorios\Entidades\Respostas.cs" />
+    <Compile Include="Repositorios\Entidades\Map\PerguntasMap.cs" />
+    <Compile Include="Repositorios\Entidades\Perguntas.cs" />
+    <Compile Include="Repositorios\Entidades\Map\PersonagensMap.cs" />
+    <Compile Include="Repositorios\Entidades\Personagens.cs" />
     <Compile Include="Repositorios\Entidades\Map\TemasMap.cs" />
     <Compile Include="Repositorios\Entidades\Temas.cs">
       <SubType>Code</SubType>
