--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,7 +60,9 @@
     <Compile Include="NH\NHSessionFactoryManager.cs" />
     <Compile Include="NH\NHSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Entidades\Cadastro.cs" />
     <Compile Include="Repositorios\Entidades\DTO\TemasDTO.cs" />
+    <Compile Include="Repositorios\Entidades\Map\CadastroMap.cs" />
     <Compile Include="Repositorios\Entidades\Map\RespostasMap.cs" />
     <Compile Include="Repositorios\Entidades\Respostas.cs" />
     <Compile Include="Repositorios\Entidades\Map\PerguntasMap.cs" />
