--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -59,6 +59,9 @@
     <Compile Include="NH\NHSessionFactoryManager.cs" />
     <Compile Include="NH\NHSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Entidades\DTO\SexoDTO.cs" />
+    <Compile Include="Repositorios\Entidades\Map\UsuarioMap.cs" />
+    <Compile Include="Repositorios\Entidades\Usuario.cs" />
     <Compile Include="Repositorios\Entidades\DTO\TemasDTO.cs" />
     <Compile Include="Repositorios\Entidades\Map\RespostasMap.cs" />
     <Compile Include="Repositorios\Entidades\Respostas.cs" />
