--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -60,9 +60,10 @@
     <Compile Include="NH\NHSessionFactoryManager.cs" />
     <Compile Include="NH\NHSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Entidades\DTO\SexoDTO.cs" />
     <Compile Include="Repositorios\Entidades\DTO\TemasDTO.cs" />
-    <Compile Include="Repositorios\Entidades\Map\CadastroMap.cs" />
     <Compile Include="Repositorios\Entidades\Map\RespostasMap.cs" />
+    <Compile Include="Repositorios\Entidades\Map\UsuarioMap.cs" />
     <Compile Include="Repositorios\Entidades\Respostas.cs" />
     <Compile Include="Repositorios\Entidades\Map\PerguntasMap.cs" />
     <Compile Include="Repositorios\Entidades\Perguntas.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="Repositorios\Entidades\Temas.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Repositorios\Entidades\Usuario.cs" />
     <Compile Include="Repositorios\Implementacao\GenericoRep.cs" />
   </ItemGroup>
   <ItemGroup>
