--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Entidades\DTO\SexoDTO.cs" />
     <Compile Include="Repositorios\Entidades\DTO\TemasDTO.cs" />
+    <Compile Include="Repositorios\Entidades\Manage.cs" />
+    <Compile Include="Repositorios\Entidades\Map\ManageMap.cs" />
     <Compile Include="Repositorios\Entidades\Map\RespostasMap.cs" />
     <Compile Include="Repositorios\Entidades\Map\UsuarioMap.cs" />
     <Compile Include="Repositorios\Entidades\Respostas.cs" />
