--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -251,6 +251,7 @@
     <Content Include="Images\logo.png" />
     <Content Include="Images\tabuleiro.png" />
     <Content Include="Images\usu.png" />
+    <Content Include="img\glyphicons-halflings.png" />
     <Content Include="Scripts\BO\additional-methods.min-1.11.1.js" />
     <Content Include="Scripts\BO\bootstrap.min.js" />
     <Content Include="Scripts\BO\jquery-1.9.1.min.js" />
@@ -339,7 +340,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="img\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
