--- a/MasterMind/Web.config
+++ b/MasterMind/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MasterMind-20131017152238;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MasterMind-20131017152238.mdf" providerName="System.Data.SqlClient"/>
-    <add name="Default" connectionString="Server=Leandro-PC\SQL2012;Initial Catalog=MasterMind;Persist Security Info=True;User ID=sa;Password=sa123;Connect Timeout=1800;" providerName="System.Data.SqlClient"/>
-    <!--<add name="Default" connectionString="Server=W8_VS12;Initial Catalog=MasterMind;Persist Security Info=True;User ID=sa;Password=adm;Connect Timeout=1800;" providerName="System.Data.SqlClient"/>-->
+    <!--<add name="Default" connectionString="Server=Leandro-PC\SQL2012;Initial Catalog=MasterMind;Persist Security Info=True;User ID=sa;Password=sa123;Connect Timeout=1800;" providerName="System.Data.SqlClient"/>-->
+    <add name="Default" connectionString="Server=W8_VS12;Initial Catalog=MasterMind;Persist Security Info=True;User ID=sa;Password=adm;Connect Timeout=1800;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
