Aceso e Criação de Salas. Ranking top 3 , Ranking
- Dropar a tabela de Salas
- Rodar Script 003 de novo (corrigido)
- Rodar script 004

--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -60,6 +60,8 @@
     <Compile Include="NH\NHSessionFactoryManager.cs" />
     <Compile Include="NH\NHSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Entidades\Map\RankingMap.cs" />
+    <Compile Include="Repositorios\Entidades\Ranking.cs" />
     <Compile Include="Repositorios\Entidades\Map\SalaMap.cs" />
     <Compile Include="Repositorios\Entidades\Salas.cs" />
     <Compile Include="Repositorios\Entidades\DTO\PerfilDTO.cs" />
