--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -275,6 +275,8 @@
     <Content Include="Styles\backoffice.css" />
     <Content Include="Styles\bootstrap-responsive.min.css" />
     <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Views\Game\Ranking.aspx" />
+    <Content Include="Views\Game\Ranking_top.aspx" />
     <Content Include="Views\Game\Partida.aspx" />
     <Content Include="Views\Game\Principal.aspx" />
     <Content Include="Views\Salas\List.aspx" />
