--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -60,6 +60,7 @@
     <Compile Include="NH\NHSessionFactoryManager.cs" />
     <Compile Include="NH\NHSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Entidades\DTO\TipoSalaDTO.cs" />
     <Compile Include="Repositorios\Entidades\DTO\NivelDTO.cs" />
     <Compile Include="Repositorios\Entidades\Map\NivelMap.cs" />
     <Compile Include="Repositorios\Entidades\Nivel.cs" />
