Tela de escolha de Personagem
Rodar script 008

Tela de escolha de personagem funcionando para ligar com o usuário.
- Falta salvar uma imagem no banco e trazer na escolha do personagem
- Falta mudar o tema de fundo da aplicação cada vez que muda um
personagem

Ranking Top 3 corrigido para mostrar a classificação do jogador atual

--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -276,6 +276,7 @@
     <Content Include="Styles\backoffice.css" />
     <Content Include="Styles\bootstrap-responsive.min.css" />
     <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Views\Game\Personagem.aspx" />
     <Content Include="Views\Game\Ranking.aspx" />
     <Content Include="Views\Game\Ranking_top.aspx" />
     <Content Include="Views\Game\Partida.aspx" />
