Inicio na implementação na tela principal do jogo onde conterá o tabuleiro.

--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -90,6 +90,7 @@
     </Compile>
     <Compile Include="Repositorios\Entidades\Usuario.cs" />
     <Compile Include="Repositorios\Implementacao\GenericoRep.cs" />
+    <Compile Include="Repositorios\Implementacao\PerguntasRep.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
