--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -259,6 +259,7 @@
     <Content Include="Scripts\BO\jquery-1.9.1.min.js" />
     <Content Include="Scripts\BO\jquery.validate.min-1.11.1.js" />
     <Content Include="Scripts\BO\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Game\game.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -276,6 +277,7 @@
     <Content Include="Styles\backoffice.css" />
     <Content Include="Styles\bootstrap-responsive.min.css" />
     <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Styles\jogo.css" />
     <Content Include="Views\Game\Ranking.aspx" />
     <Content Include="Views\Game\Ranking_top.aspx" />
     <Content Include="Views\Game\Partida.aspx" />
@@ -344,6 +346,8 @@
     <Content Include="Views\Usuario\List.cshtml" />
     <Content Include="Views\Usuario\Form.cshtml" />
     <Content Include="Views\Usuario\FormView.cshtml" />
+    <Content Include="Views\Game\Partida.cshtml" />
+    <Content Include="Views\Shared\_LayoutTabuleiro.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
