Ajuste Tabuleiro: - Script alteração tabela Jogos - Ajuste ao apresentar os dados dos jogadores da partida - Ajuste para pegar uma pergunta aleatória do primeiro jogador que entrou na sala. - Ajuste gravar e definir a sequencia de quem vai responder as perguntas (jogar).

--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -91,6 +91,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Repositorios\Entidades\Usuario.cs" />
+    <Compile Include="Repositorios\Implementacao\JogosRep.cs" />
     <Compile Include="Repositorios\Implementacao\SalasRep.cs" />
     <Compile Include="Repositorios\Implementacao\UsuariosRep.cs" />
     <Compile Include="Repositorios\Implementacao\GenericoRep.cs" />
