--- a/Infraestrutura/Infraestrutura.csproj
+++ b/Infraestrutura/Infraestrutura.csproj
@@ -61,9 +61,14 @@
     <Compile Include="NH\NHSessionFactoryManager.cs" />
     <Compile Include="NH\NHSessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Entidades\DTO\StatusPartidaTabuleiroDTO.cs" />
+    <Compile Include="Repositorios\Entidades\Map\LayoutTabuleiroMap.cs" />
+    <Compile Include="Repositorios\Entidades\Map\TrilhasTabuleiroMap.cs" />
+    <Compile Include="Repositorios\Entidades\TrilhasTabuleiro.cs" />
     <Compile Include="Repositorios\Entidades\DTO\PersonagemDTO.cs" />
     <Compile Include="Repositorios\Entidades\DTO\TipoSalaDTO.cs" />
     <Compile Include="Repositorios\Entidades\DTO\NivelDTO.cs" />
+    <Compile Include="Repositorios\Entidades\LayoutTabuleiro.cs" />
     <Compile Include="Repositorios\Entidades\Map\NivelMap.cs" />
     <Compile Include="Repositorios\Entidades\Nivel.cs" />
     <Compile Include="Repositorios\Entidades\Jogos.cs" />
@@ -91,6 +96,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Repositorios\Entidades\Usuario.cs" />
+    <Compile Include="Repositorios\Implementacao\TrilhasTabuleiroRep.cs" />
     <Compile Include="Repositorios\Implementacao\JogosRep.cs" />
     <Compile Include="Repositorios\Implementacao\SalasRep.cs" />
     <Compile Include="Repositorios\Implementacao\UsuariosRep.cs" />
