--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -299,6 +299,7 @@
     <Content Include="Styles\jogo.css" />
     <Content Include="Styles\style1.css" />
     <Content Include="Styles\tabuleiro.css" />
+    <Content Include="Views\Account\Personagem_partial.aspx" />
     <Content Include="Views\Account\Personagem.aspx" />
     <Content Include="Views\Game\Ranking.aspx" />
     <Content Include="Views\Game\Ranking_top.aspx" />
