Alterações Layout principal.master
Alterações de Layout da Master, Listar Salas, Criar Salas, Top 3 Rank.

Em progresso alteração da validação na hora de criar salas para validar
em Jquery. [problemas em passar o obj droplist para Jquery e CSS]
Adicionando function JS para o TopRank3..
Alterações do Site.css

--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -251,6 +251,20 @@
     <Content Include="Images\errado.jpg" />
     <Content Include="Images\footer_log.png" />
     <Content Include="Images\fundo.jpg" />
+    <Content Include="Images\fundos\bo_play_pattern.png" />
+    <Content Include="Images\fundos\bo_play_pattern_%402X.png" />
+    <Content Include="Images\fundos\escheresque_ste.png" />
+    <Content Include="Images\fundos\escheresque_ste_%402X.png" />
+    <Content Include="Images\fundos\grey_wash_wall.png" />
+    <Content Include="Images\fundos\grey_wash_wall_%402X.png" />
+    <Content Include="Images\fundos\random_grey_variations.png" />
+    <Content Include="Images\fundos\random_grey_variations_%402X.png" />
+    <Content Include="Images\fundos\triangular.png" />
+    <Content Include="Images\fundos\triangular_%402X.png" />
+    <Content Include="Images\fundos\tweed.png" />
+    <Content Include="Images\fundos\tweed_%402X.png" />
+    <Content Include="Images\fundos\whitey.png" />
+    <Content Include="Images\fundos\whitey_%402X.png" />
     <Content Include="Images\geografia.gif" />
     <Content Include="Images\Gradiente_prata.png" />
     <Content Include="Images\Gradiente_prata_topo.png" />
@@ -288,8 +302,6 @@
     <Content Include="Scripts\Game\game.js" />
     <Content Include="Scripts\Game\tabuleiro.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
-    <Content Include="Scripts\jquery-1.7.1.js" />
-    <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
@@ -299,12 +311,15 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\js\jquery.dropdown.js" />
+    <Content Include="Scripts\js\modernizr.custom.63321.js" />
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Styles\backoffice.css" />
     <Content Include="Styles\bootstrap-responsive.min.css" />
     <Content Include="Styles\bootstrap.min.css" />
+    <Content Include="Styles\common.css" />
     <Content Include="Styles\demo.css" />
     <Content Include="Styles\icons.css" />
     <Content Include="Styles\Logins.css" />
