Alterações Layout - Retirada jQuery - Add CSS
O list em jQuery estava causando muitos problemas e gerando muito
trabalho para fazer ele funcionar 100% - foi retirado.
Assim como as alterações no SalasController foi retirado.

Criei um layout que ficou bom e não necessita da alteração do modo como
a tela faz a gravação dos dados;
Apliquei nas telas que são chamadas pela principal.master;

Testei todas as telas, todas as mensagens dos campos obrigatorios
voltaram a funcionar.

--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -244,6 +244,7 @@
     <Content Include="Global.asax" />
     <None Include="Properties\PublishProfiles\MasterMind - Leandro.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Images\arrow_Down.jpg" />
     <Content Include="Images\cartas2.png" />
     <Content Include="Images\carta_.jpg" />
     <Content Include="Images\cartoon.jpg" />
